fix: set scrollbar overflow as overlay

--- a/styles.css
+++ b/styles.css
@@ -69,6 +69,7 @@
 
 html {
   scroll-behavior: smooth;
+  overflow-y: overlay;
 }
 
 html,
